# nano-agent

./: .gitignore  ANALYSIS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SURVEY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLUGINS.md  rust-core.md
examples/: config.toml
examples/plugins/: wordcount.py  wordcount.tool.json
nano_agent/: __init__.py  agent.py  backend.py  cli.py  config.py  memory.py  plugins.py  prompt.py  tools.py  trace.py  types.py
tests/: test_agent.py  test_config.py  test_memory_and_python.py  test_plugins.py  test_prompt.py  test_tools.py  test_trace.py  test_v05_features.py
